Changelog
=========

1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2012-03-12)
------------------

- Fixed related Items and categorisation (#4)


1.0.1 (2011-10-21)
------------------

- Fixed manage portlet links (#3)
- Fixed setuphandler execution


1.0 (2011-06-23)
----------------

- re-added radio box styling
- tuned rules.xml to not style zmi pages
- Add french translation [toutpt]
- Updated spanish translation [macagua]

1.0rc1 (2011-06-12)
-------------------

- Major rewrite to apply manipulations via plone.app.theming/diazo
- removed "settings" panel.


0.40 (2011-05-28)
-----------------

- removed own jquery.ui integration and use collective.js.jqueryui (reinstall via quickinstall required!)
- collective.js.jqueryui's sunburst theme integrated with special resource handling
- re-added validation of theme name characters
- made the font size of the default start theme a little smaller
- udpated pot file and german translations
- sorting of theme names


0.34 (2011-05-17)
-----------------

- IE7 Fix for global tabs


0.33 (2011-05-06)
-----------------

- do not show the "enable cookie" status message, it it is not visible


0.32 (2011-04-30)
-----------------

- Show Uninstall in Title of profile to not confuse plone-admins ;-) [jensens]
- handle BadZipfile exceptions
- updated jquery.ui to 1.8.12


0.31 (2011-03-07)
-----------------

- added tests
- added selenium tests
- updated jquery.ui to 1.8.10
- tested on plone 4.0.x and 4.1.x


0.30 (2011-02-16)
-----------------

- added Spanish translation [macagua]
- changed control panel gui and usage of download handling
- added translatable strings for control panel javascripts
- changed some imports (for Plone 4.1 compatibility)
- pep8 cleanups
- updated jquery.ui to 1.8.9


0.28 (2011-01-11)
-----------------

- Back to old version numbering schema - to make buildout updates work.


0.2.7 (2011-01-11)
------------------

- Fixed version numbering