@@ -10,13 +10,11 @@
 
   <!-- start: font -->
   <xsl:template match="body">
-    <xsl:choose>
-	<xsl:copy>
-	  <xsl:apply-templates select="@*" />
-	  <xsl:attribute name="class"><xsl:value-of select="concat('ui-widget ', @class)" /></xsl:attribute>
-	  <xsl:apply-templates match="node()" />
-	</xsl:copy>
-    </xsl:choose>
+    <xsl:copy>
+      <xsl:apply-templates select="@*" />
+      <xsl:attribute name="class"><xsl:value-of select="concat('ui-widget ', @class)" /></xsl:attribute>
+      <xsl:apply-templates match="node()" />
+    </xsl:copy>
   </xsl:template>
   <!-- end: font -->
 
@@ -186,25 +184,23 @@
   </xsl:template>
 
   <xsl:template match="input[@type='radio']">
-    <xsl:choose>
-      <span class="ui-button-text-only">
-	<span style="display:inline-block;width:16px;height:16px;margin-right:5px;">
-	  <xsl:attribute name="class">
-	    <xsl:if test="./@disabled">
-	      ui-state-disabled
-	    </xsl:if>
-	    hover ui-widget-content ui-corner-all
-	  </xsl:attribute>
-	  <label style="width: 16px; height: 16px; display: inline-block"
-		 class="ui-icon ui-icon-radio-off">
-	  </label>
-	</span>
-	<xsl:copy>
-	  <xsl:apply-templates select="@*" />
-	  <xsl:attribute name="style">display: none;</xsl:attribute>
-	</xsl:copy>
+    <span class="ui-button-text-only">
+      <span style="display:inline-block;width:16px;height:16px;margin-right:5px;">
+	<xsl:attribute name="class">
+	  <xsl:if test="./@disabled">
+	    ui-state-disabled
+	  </xsl:if>
+	  hover ui-widget-content ui-corner-all
+	</xsl:attribute>
+	<label style="width: 16px; height: 16px; display: inline-block"
+	       class="ui-icon ui-icon-radio-off">
+	</label>
       </span>
-    </xsl:choose>
+      <xsl:copy>
+	<xsl:apply-templates select="@*" />
+	<xsl:attribute name="style">display: none;</xsl:attribute>
+      </xsl:copy>
+    </span>
   </xsl:template>
   <!--  end: forms -->
 
