@@ -4,7 +4,9 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Pinned plone.app.theming to avoid zmi styling
+- Fully removed "not-zmi" styling rules
+
 
 
 1.0.2 (2012-03-12)
